--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     Tokyo, Osaka, Yokohama, Nagoya, Sapporo, Kobe, Kyoto, Fukuoka-->
     <div></div>
     <!--ajouter la carte-->
+    <div></div>
     <div id="map"></div>
     <script type="module" src="./main.js"></script>
 </body>
