--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 <body>
     <!--ajouter la navbar-->
-    <header>
     <nav>
         <!--aria current permet d'indiquer que lien vers la même page, aria label indique que le lien permet de visiter la homepage-->
         <a href="index.html" class="nav-icon" aria-label="homepage" aria-current="page">
@@ -45,7 +44,7 @@
             </div>
         </div>
         <!--va apparaître lorsque la taille de l'écran est réduit-->
-        <div class="nav-authentication">
+        <!--<div class="nav-authentication">
             <a href="#" class="sign-user" aria-label="Sign in page">
                 <img src="ressources/abstract-user.svg" alt="user-icon">
             </a>
@@ -53,15 +52,13 @@
                 <button type="button">Sign In</button>
                 <button type="button">Sign Up</button>
             </div>
-        </div>
+        </div>-->
         
     </nav>
-    </header>
-    <main id="map-container">
+    <!--<main id="map-container">-->
     <!--ajouter la carte-->
-    <!--<iframe width="500" height="300" src="https://api.maptiler.com/maps/d67c9eaf-910f-4569-b3ff-1d9506b2bf4e/?key=KOOTJYxtX4YyuMBFNP0s#4.2/38.06794/135.86734"></iframe>-->
     <div id="map"></div>
-    </main>
+    <!--</main>-->
     <!--lien leaflet js pour la carte-->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
